@@ -147,7 +147,7 @@ function Line.get_by_name(self, class, name)
 end
 
 function Line.shift(self, dataset, direction)
-    Collection.shift(self[dataset.class], dataset, direction)
+    return Collection.shift(self[dataset.class], dataset, direction)
 end
 
 
