@@ -54,6 +54,7 @@ item=item
 items=items
 citems=Items
 fluid=fluid
+lfuel=fuel
 fuel=Fuel
 belt=belt
 belts=belts
@@ -76,11 +77,15 @@ cbeacons=Beacons
 energy=Energy
 pollution=pollution
 cpollution=Pollution
+lrecipe=recipe
 recipe=Recipe
+lingredient=ingredient
 ingredient=Ingredient
 ingredients=Ingredients
+lproduct=product
 product=Product
 products=Products
+lbyproduct=byproduct
 byproduct=Byproduct
 byproducts=Byproducts
 subfactory=subfactory
@@ -110,6 +115,12 @@ add_beacons=Add beacons
 none=None
 on=On
 off=Off
+left=left
+right=right
+up=up
+down=down
+upgraded=upgraded
+downgraded=downgraded
 
 # Subfactory dialog
 new_subfactory=New Subfactory
@@ -248,8 +259,10 @@ error_product_wrong_floor=Product recipes can only be added to the top-level sub
 error_byproduct_wrong_floor=Byproduct recipes can only be added to the top floor or where produced.
 error_editing_archived_subfactory=Archived subfactories can’t be edited.
 error_no_prioritizing_single_product=Recipes with a single relevant product can’t be prioritized.
+error_list_item_cant_be_shifted=This __1__ can’t be moved __2__.
+error_object_cant_be_up_downgraded=This __1__ can’t be __2__.
+warning_disabled_recipe=This recipe is not researched yet, so you can’t produce it currently.
 hint_tutorial=If you are new to Factory Planner, consider taking a look the the tutorial ⟶
-hint_disabled_recipe=This recipe is not researched yet, so you can’t produce it currently.
 
 # Units
 unit_watt=W
